<resources>
    <string name="app_name">Saikou</string>
    <string name="slogan">The Best Anime, Manga &amp; Novel app for Android.</string>
    <string name="login">Login</string>

    <string name="discord">https://discord.gg/5TXAWTU5qr</string>
    <string name="telegram">https://telegram.me/saikou_app</string>
    <string name="github">https://github.com/saikou-app/saikou</string>

    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="manga">Manga</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="info">Info</string>
    <string name="watch">Watch</string>
    <string name="read">Read</string>

    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>

    <string name="sad">X(</string>
    <string name="oh">:o</string>
    <string name="colon">\u0008:\u0008</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh</string>

    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="sort_by">Sort By</string>
    <string name="genre">Genre</string>
    <string name="top_score">Top Score</string>
    <string name="updated">Recently Updated</string>
    <string name="trending_anime">Trending Anime</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="trending_manga">Trending Manga</string>
    <string name="trending_novel">Trending Novel</string>
    <string name="popular_manga">Popular Manga</string>

    <string name="username">Username</string>
    <string name="chapters_read">Chapters Read\u0008</string>
    <string name="episodes_watched">Episodes Watched\u0008</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>

    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <string name="empty">All caught up, when New?</string>
    <string name="title_activity_media">MediaActivity</string>
    <string name="action_settings">Settings</string>

    <string name="add">Add to List</string>
    <string name="list_editor">List Editor</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="notifications">Notifications</string>
    <string name="status">STATUS</string>
    <string-array name="status">
        <item>PLANNING</item>
        <item>CURRENT</item>
        <item>COMPLETED</item>
        <item>REPEATING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string name="progress">PROGRESS</string>
    <string name="score">SCORE</string>
    <string name="score_suffix">\u0008/ 10</string>
    <string name="started_at">STARTED AT</string>
    <string name="completed_at">COMPLETED AT</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="name">Name</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="total_eps">Total Episodes</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="ep_duration">Average Duration</string>
    <string name="min">\u0008min</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>

    <string name="roles">Roles</string>
    <string name="details">Details</string>

    <string name="play_yt">Play on Youtube</string>
    <string name="eps">Episodes</string>
    <string name="ep">Episode</string>
    <string name="chaps">Chapters</string>
    <string name="chap">Chapter</string>
    <string name="wrong">Wrong Title?</string>
    <string-array name="manga_sources">
        <item>MANGABUDDY</item>
        <item>MANGASEE</item>
        <item>MANGAPILL</item>
        <item>MANGADEX</item>
    </string-array>
    <string name="source_not_found">
        Couldn\'t find anything X( \n
        Try another source.
    </string>
    <string name="novel_na">Novels are not supported yet!</string>
    <string name="server_selector">Select Server</string>
    <string name="auto_select_server">Auto Selecting Server</string>
    <string name="make_default">Make Default</string>
    <string name="filler">Filler</string>
    <string name="adult">Adult</string>
    <string name="tag">Tag</string>
</resources>