<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manga.MangaSourceFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/mediaLoadProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:indeterminate="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/mangaSourceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.cardview.widget.CardView
                android:id="@+id/mangaSourceCountdownContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-16dp"
                android:visibility="gone"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardCornerRadius="0dp">

                <TextView
                    android:id="@+id/mangaSourceCountdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnPrimary"
                    tools:text="Next Episode will be released in \n00:00:00" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-24dp"
                android:orientation="vertical"
                android:padding="32dp">

                <Button
                    android:id="@+id/mangaSourceYT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/fav"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/play_yt"
                    android:textColor="@color/bg_white"
                    android:visibility="gone"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/ic_round_play_circle_24"
                    app:iconTint="@color/bg_white"
                    tools:ignore="TextContrastCheck"
                    tools:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/source"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_round_playlist_play_24">

                    <AutoCompleteTextView
                        android:id="@+id/mangaSource"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:freezesText="false"
                        android:inputType="none"
                        android:padding="8dp"
                        android:text="@string/read"
                        android:textAllCaps="true"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"
                        tools:ignore="LabelFor,TextContrastCheck,DuplicateSpeakableTextCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/mangaSourceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/poppins_bold"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="8dp"
                    android:singleLine="true"
                    tools:text="@string/get_recommendations" />

                <TextView
                    android:id="@+id/mangaSourceSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="-12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="12dp"
                    android:text="@string/wrong"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorSecondary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/chaps"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/mangaSourceList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.33"
                        android:padding="8dp"
                        app:srcCompat="@drawable/ic_round_view_list_24"
                        app:tint="@color/bg_opp"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                    <ImageView
                        android:id="@+id/mangaSourceCompact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.33"
                        android:padding="8dp"
                        app:srcCompat="@drawable/ic_round_view_comfy_24"
                        app:tint="@color/bg_opp"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                    <ImageView
                        android:id="@+id/mangaSourceTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="1"
                        android:padding="8dp"
                        android:rotation="90"
                        app:srcCompat="@drawable/ic_round_arrow_back_ios_new_24"
                        app:tint="@color/bg_opp"
                        tools:ignore="ContentDescription,ImageContrastCheck" />
                </LinearLayout>


            </LinearLayout>

            <ProgressBar
                android:id="@+id/mangaSourceProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="match_parent"
                android:requiresFadingEdge="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/mangaSourceChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp" />

            </HorizontalScrollView>

            <TextView
                android:id="@+id/mangaSourceNotFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="32dp"
                android:text="@string/source_not_found"
                android:textAlignment="center"
                android:textSize="16sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mangaSourceRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:spanCount="4"
                tools:itemCount="12"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_episode_compact"
                tools:orientation="vertical"
                tools:scrollbars="vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/mangaSourceNovel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/novel_na"
            android:textSize="16sp"
            android:visibility="gone" />
    </FrameLayout>
</androidx.core.widget.NestedScrollView>