<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/searchScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/searchScrollContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp" />

            <CheckBox
                android:id="@+id/searchAdultCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="-12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="-8dp"
                android:layoutDirection="rtl"
                android:text="@string/adult"
                android:textAlignment="textEnd"
                android:visibility="gone"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/searchTagCont"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/tag"
                    android:visibility="gone"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:hintAnimationEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/searchTag"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:freezesText="false"
                        android:inputType="none"
                        android:padding="8dp"
                        android:textAllCaps="true"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"
                        tools:ignore="LabelFor,TextContrastCheck,DuplicateSpeakableTextCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/searchGenreCont"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/genre"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:hintAnimationEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/searchGenre"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:freezesText="false"
                        android:inputType="none"
                        android:padding="8dp"
                        android:textAllCaps="true"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"
                        tools:ignore="LabelFor,TextContrastCheck,DuplicateSpeakableTextCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/sort_by"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:hintAnimationEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/searchSortBy"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:freezesText="false"
                        android:inputType="none"
                        android:padding="8dp"
                        android:textAllCaps="true"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"
                        tools:ignore="LabelFor,TextContrastCheck,DuplicateSpeakableTextCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/searchClear"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    app:srcCompat="@drawable/ic_round_close_24"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/search_results"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/searchResultList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.33"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_round_view_list_24"
                    app:tint="@color/bg_opp"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <ImageView
                    android:id="@+id/searchResultGrid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.33"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_round_grid_view_24"
                    app:tint="@color/bg_opp"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ani.saikou.FadingEdgeRecyclerView
                    android:id="@+id/searchRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="true"
                    android:padding="16dp"
                    android:requiresFadingEdge="vertical"
                    android:visibility="gone"
                    app:spanCount="1"
                    tools:itemCount="10"
                    tools:layoutManager="GridLayoutManager"
                    tools:listitem="@layout/item_media_large"
                    tools:orientation="vertical"
                    tools:visibility="visible" />

                <ProgressBar
                    android:id="@+id/searchProgress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:layout_margin="24dp"
                    android:indeterminate="true"
                    android:visibility="gone" />
            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchBar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:hint="@string/anime"
        android:transitionName="@string/search"
        app:boxBackgroundColor="@color/bg"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="28dp"
        app:boxCornerRadiusBottomStart="28dp"
        app:boxCornerRadiusTopEnd="28dp"
        app:boxCornerRadiusTopStart="28dp"
        app:endIconDrawable="@drawable/ic_round_search_24"
        app:hintAnimationEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/searchBarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            tools:ignore="LabelFor,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>